# peridot

./: .gitignore  Cargo.toml  README.md  set_wepppy310_env.sh
.github/workflows/: rust.yml
src/: catchment_trace.rs  douglas_peucker.rs  lib.rs  main.rs.old  netw.rs  raster.rs  skid_trail_segmentation.rs  support.rs  utils.rs  watershed_abstraction.rs  wbt_netw.rs  whiteboxtools_wrappers.rs
src/scripts/: hubbarbrook_culvert_delineation.rs  north_star_salvage_logging_delineation.rs
tests/fixtures/support/: test_slp_output.txt
tests/fixtures/watershed_abstraction/mdobre-scarce-belch/dem/topaz/: BOUND.ARC  CHNJNT.ARC  DEDNM.INP  DEDNM.RPT  DISCHA.ARC  DISOUT.ARC  DNMCNT.INP  ELDCHA.ARC  ELDOUT.ARC  ELVBND.TAB  FLOPAT.ARC  FLOVEC.ARC  FVSLOP.ARC  NETFUL.ARC  NETW.ARC  NETW.TAB  NETWE.ARC  NTWINT.FIL  OUTCAT.UNF  OUTCHA.UNF  OUTCNT.UNF  RASFOR.RPT  RASPRO.RPT  RELIEF.ARC  SBCT.TAB  SUBWTA.ARC  TASPEC.ARC  UPAREA.ARC
tests/fixtures/watershed_abstraction/mdobre-womanly-ascot/dem/: index.html
tests/fixtures/watershed_abstraction/mdobre-womanly-ascot/dem/topaz/: BOUND.ARC  CHNJNT.ARC  DEDNM.RPT  DISCHA.ARC  DISOUT.ARC  DNMCNT.INP  ELDCHA.ARC  ELDOUT.ARC  ELVBND.TAB  FLOPAT.ARC  FLOVEC.ARC  NETFUL.ARC  NETW.ARC  NETW.TAB  NETWE.ARC  NTWINT.FIL  OUTCAT.UNF  OUTCHA.UNF  OUTCNT.UNF  RASFOR.RPT  RASPRO.RPT  SBCT.TAB  SUBWTA.ARC  TASPEC.ARC  UPAREA.ARC
