[package]
name = "peridot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abstract_watershed"
path = "src/bin/abstract_watershed.rs"

[[bin]]
name = "hubbarbrook_culvert_delineation"
path = "src/scripts/hubbarbrook_culvert_delineation.rs"

[[bin]]
name = "north_star_salvage"
path = "src/scripts/north_star_salvage_logging_delineation.rs"

[dependencies]
gdal = "0.16"
maplit = "1.0"
interp = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
geojson = "0.24.1"
error-stack = "0.4.1"
env_logger = "0.10.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rayon = "1.8.0"
proj = "0.27.2"
clap = { version = "4.4.5", features = ["derive", "cargo"] }
csv = "1.2.2"
